--- a/styles/Home/Project.module.css
+++ b/styles/Home/Project.module.css
@@ -69,7 +69,8 @@
 }
 .Go  p {
   /* color: var(--background); */
-  color: var(--text-color);
+  /* color: var(--text-color); */
+  color: white;
 
   margin-bottom: 0;
   text-transform: capitalize;
