--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,11 +15,12 @@
   --card-rgb: 180, 185, 188;
   --card-border-rgb: 131, 134, 135; */
   --border: 1px solid #e9eaec;
---radius: 5px;
-/* --black:  #2a2727;
+  --radius: 5px;
+  /* --black:  #2a2727;
 --background : #f7f7fa; */
 
 }
+
 /* 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -59,6 +60,7 @@
   padding: 0;
   margin: 0;
 }
+
 html {
   scroll-behavior: smooth !important;
 }
@@ -71,51 +73,56 @@ body {
 }
 
 body[data-theme="light"] {
-  --black:  #2a2727;
---background : #f7f7fa;
---text-color : #2a2727;
---nav-bg : white;
---border : 1px solid #6a6a6a24;
+  --black: #2a2727;
+  --background: #f7f7fa;
+  --text-color: #2a2727;
+  --nav-bg: white;
+  --border: 1px solid #6a6a6a24;
 
---text6 : #2a2727;
-  --box : 2px 4px 12px rgb(0 0 0/8%);
-  --button : linear-gradient(to right, #2a2727 0%, #2a2727 100%);
-  --bg-im : linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%)
-  /* --logo :  url("https://i.ibb.co/X48ZBnm/logo.png"); */
+  --text6: #2a2727;
+  --box: 2px 4px 12px rgb(0 0 0/8%);
+  --button: linear-gradient(to right, #2a2727 0%, #2a2727 100%);
+  --bg-im: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%)
+    /* --logo :  url("https://i.ibb.co/X48ZBnm/logo.png"); */
 }
 
 body[data-theme="dark"] {
-  --black:  #f7f7fa;
-  --background : #18191a;
-  --nav-bg : #242526;
-  --text-color : #ffffff;
-  --bgImage : linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
-  --text : #bdb6e8;
-  --text2 : #27255e;
-  --text3 : #605afa;
-  --text4 : #5727b0;
-  --text5 : #EA80FC;
-  --text6 : #e91e63;
-  --box : 0px 1px 2px rgba(0, 0, 0, 0.2);
-  --button : linear-gradient(to right, #ed6ea0 0%, #ec8c69 100%);
+  --black: #f7f7fa;
+  --background: #18191a;
+  --nav-bg: #242526;
+  --text-color: #ffffff;
+  --bgImage: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
+  --text: #bdb6e8;
+  --text2: #27255e;
+  --text3: #605afa;
+  --text4: #5727b0;
+  --text5: #EA80FC;
+  --text6: #e91e63;
+  --box: 0px 1px 2px rgba(0, 0, 0, 0.2);
+  --button: linear-gradient(to right, #ed6ea0 0%, #ec8c69 100%);
   /* --button: linear-gradient(to right, #b8cbb8 0%, #b8cbb8 0%, #b465da 0%, #cf6cc9 33%, #ee609c 66%, #ee609c 100%); */
   /* --button: linear-gradient(to top, #f43b47 0%, #453a94 100%); */
   /* --button: linear-gradient(to top, #cc208e 0%, #6713d2 100%); */
-  --bg-im : linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
-  --border : 1px solid #666;
+  --bg-im: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
+  --border: 1px solid #666;
   /* --logo :  url("https://i.ibb.co/X48ZBnm/logo.png"); */
-  --input : #3a3b3c;
-  --span :#b0b3b8;
+  --input: #3a3b3c;
+  --span: #b0b3b8;
 }
-h1 , h2 {
+
+h1,
+h2 {
   font-family: 'Poppins', sans-serif !important;
   color: var(--text6);
 }
-  h3 , p {
+
+h3,
+p {
   font-family: 'Poppins', sans-serif !important;
   color: var(--black);
 
 }
+
 body {
   background-color: var(--background) !important;
   /* transition:all 0.1s  linear ;
@@ -124,6 +131,7 @@ body {
   -ms-transition:all 0.1s  linear ;
   -o-transition:all 0.1s  linear ; */
 }
+
 a {
   color: inherit;
   text-decoration: none;
@@ -134,21 +142,24 @@ a {
 .main {
   margin-top: 10vh;
 }
+
 @media (max-width: 767.98px) {
   .main {
-  margin-top: 5vh;
+    margin-top: 5vh;
+  }
 }
- }
-.paddingTop{
-  padding-top : 5px
+
+.paddingTop {
+  padding-top: 5px
 }
+
 .main-title {
   color: var(--text6);
   margin: 100px auto 50px;
   font-weight: bold;
   position: relative;
   border: 2px solid var(--text6);
-  width: fit-content ;
+  width: fit-content;
   padding: 10px 20px;
   transition: all 0.3s;
   -webkit-transition: all 0.3s;
@@ -202,9 +213,9 @@ a {
 
 .main-title:hover {
   /* color: var(--background); */
-  color: var(--black);
-
-  border-color:var(--background);
+  /* color: var(--black); */
+  color: white;
+  border-color: var(--background);
   transition-delay: 0.5s;
 }
 
@@ -247,7 +258,7 @@ a {
   /* background: var(--button); */
   width: fit-content;
   padding: 10px 20px;
-  font-size:  clamp(18px,4vw,22px);
+  font-size: clamp(18px, 4vw, 22px);
   border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
@@ -256,24 +267,27 @@ a {
   border: var(--border);
   box-shadow: var(--box);
 }
+
 .say span {
   /* margin-left: 10px ; */
-  margin : 0 10px;
-  font-size: clamp(17px,4vw,20px);
+  margin: 0 10px;
+  font-size: clamp(17px, 4vw, 20px);
 }
+
 .say:hover {
-  color:  var(--background);
-;
+  color: var(--background);
+  ;
 }
-@media ( max-width: 991.98px) { 
+
+@media (max-width: 991.98px) {
   .say {
-  margin: 10px auto !important;
+    margin: 10px auto !important;
   }
- }
+}
 
- /*  Icons */
+/*  Icons */
 
- .labelTheme {
+.labelTheme {
   width: 25px;
   height: 25px;
   border-radius: 50%;
@@ -290,15 +304,19 @@ a {
   z-index: 999;
   /* background-color: red; */
 }
+
 /* .bgwhite {} */
-.moon  , .nosun {
+.moon,
+.nosun {
   transform: rotate(-360deg) scale(1);
   -webkit-transform: rotate(-360deg) scale(1);
   -moz-transform: rotate(-360deg) scale(1);
   -ms-transform: rotate(-360deg) scale(1);
   -o-transform: rotate(-360deg) scale(1);
 }
-.nomoon , .sun {
+
+.nomoon,
+.sun {
   transform: rotate(360deg) scale(0);
   -webkit-transform: rotate(360deg) scale(0);
   -moz-transform: rotate(360deg) scale(0);
@@ -323,6 +341,7 @@ a {
   -o-transition: 1s;
   position: absolute;
 }
+
 .toogleTheme {
   width: 25px;
   height: 25px;
@@ -339,15 +358,16 @@ a {
   -moz-transition: 1s;
   -ms-transition: 1s;
   -o-transition: 1s;
-  box-shadow: 
-  inset 0 8px 60px rgb(0, 0, 0,0.1),
-  inset 0 8px 8px rgb(0, 0, 0,0.1),
-  inset 0 -4px 4px rgb(0, 0, 0,0.1)
-  ;
+  box-shadow:
+    inset 0 8px 60px rgb(0, 0, 0, 0.1),
+    inset 0 8px 8px rgb(0, 0, 0, 0.1),
+    inset 0 -4px 4px rgb(0, 0, 0, 0.1);
 }
+
 .lightActive {
   background-color: white;
 }
+
 .darkactive {
   background-color: #2b2b2b;
 
@@ -359,7 +379,7 @@ a {
   background: var(--nav-bg);
   padding: 20px 10px;
   display: flex;
-  align-items: baseline;
+  align-items: flex-start;
   box-shadow: var(--box);
   border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -368,42 +388,53 @@ a {
   -o-border-radius: 5px;
   /* justify-content: center; */
 }
+
 .service span {
   /* color: var(--black); */
   color: var(--span);
 
-  font-size:  clamp(22px,4vw,30px);
+  font-size: clamp(22px, 4vw, 30px);
 }
+
 .service div {
-  margin : 0 10px;
+  margin: 0 10px;
 
 }
+
 .service p {
   color: var(--span);
+  margin-bottom: 0;
 }
+
 .ImageServ {
   position: relative;
   width: 100%;
   min-height: 350px;
   margin-bottom: 20px;
 }
+
 .servCol {
   margin: 10px 0;
 }
 
-@media ( max-width: 767.98px) { 
+@media (max-width: 767.98px) {
   .ImageServ {
-  min-height: 210px;
-}
-}
-@media (max-width: 991.98px) { 
-  .srvImageCol {
-    order : -1;
+    min-height: 210px;
   }
- }
- @media (min-width: 992px) {.service {
-  min-height:200px;
- } }
+}
+
+@media (max-width: 991.98px) {
+  .srvImageCol {
+    order: -1;
+  }
+}
+
+@media (min-width: 992px) {
+  .service {
+    min-height: 177px;
+  }
+}
+
 /* @media ( max-width: 767.98px) { 
   .srvImageCol {
     order : -1;
