--- a/styles/globals.css
+++ b/styles/globals.css
@@ -445,3 +445,117 @@ a {
   min-height: 210px;
 }
 } */
+
+/*  start auth */
+.LoginPage {
+  padding: 100px 0;
+}
+
+/* .LoginNoti {
+  padding: 0;
+} */
+
+/* .LoginPage h2 {
+  font-size: 22px;
+  font-weight: bold;
+} */
+
+.LoginPage button {
+  background-color: transparent;
+  /* border: none; */
+  display: block;
+}
+
+.search-section {
+  position: relative;
+  padding: 5px;
+  /* margin-bottom: 20px; */
+}
+
+.input-div {
+  text-align: center;
+  border: 1px solid var(--black);
+  color: var(--black);
+  width: 28%;
+  margin: 30px auto;
+  border-radius: 25px;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  -ms-border-radius: 25px;
+  -o-border-radius: 25px;
+}
+
+.input-div input {
+  width: 80%;
+  margin: 5px;
+  color: var(--black);
+
+  background-color: transparent;
+}
+
+.LoginNoti .input-div {
+  width: 90%;
+}
+
+.search-section input {
+  border: none;
+  direction: rtl;
+  /* display: block; */
+}
+
+.search-section input:focus {
+  border: none;
+  outline: none;
+}
+
+.submit-button {
+  background-color: var(--background) !important;
+  color: var(--black);
+  border: 1px solid var(--black);
+  display: block;
+  width: 28%;
+  margin: 0 auto;
+  padding: 15px;
+  border-radius: 30px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  -ms-border-radius: 30px;
+  -o-border-radius: 30px;
+  font-weight: bold;
+  font-size: 15px;
+}
+
+.search-section span {
+  font-size: 20px;
+  margin: 5px;
+}
+
+@media (min-width: 10px) and (max-width: 765.98px) {
+  .input-div {
+    width: 90%;
+  }
+
+  .submit-button {
+    width: 90%;
+  }
+
+  .LoginNoti .input-div {
+    width: 100%;
+  }
+
+}
+
+.LoginNoti .submit-button {
+  width: 70%;
+
+}
+
+::placeholder {
+  color: black !important;
+  opacity: 1;
+  /* Firefox */
+}
+
+.p-datatable .p-paginator-bottom {
+  background-color: var(--nav-bg);
+}
