--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -39,7 +39,7 @@
 }
 
 .jobname::before {
-  content: '';
+  content: "";
   position: absolute;
   width: 50px;
   height: 1px;
@@ -77,7 +77,6 @@
 /* 991.98px */
 
 @media (max-width: 991.98px) {
-
   /* .MyImage {
     width: 400px;
     height: 400px;
@@ -88,7 +87,6 @@
 }
 
 @media (max-width: 767.98px) {
-
   /* .MyImage {
     width: 200px;
     height: 200px;
@@ -96,7 +94,6 @@
   .Colorder {
     order: 4;
   }
-
 }
 
 /* .ImageTag {
@@ -135,7 +132,7 @@
   width: fit-content;
   margin: 20px auto;
   cursor: pointer;
-  color: var(--black)
+  color: var(--black);
 }
 
 .Mouse {
@@ -153,7 +150,7 @@
 }
 
 .Mouse::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 1px;
   height: 10px;
@@ -228,7 +225,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
 
 @media (max-width: 767.98px) {
@@ -245,7 +241,6 @@
   /* position: relative; */
 
   /* display: block; */
-
 }
 
 /* .Slills span::after {
@@ -291,13 +286,13 @@
   background: transparent !important;
 } */
 .active {
-  color: var(--black);
-  background-color: var(--background);
+  background-color: var(--black);
+  color: var(--background);
   font-weight: bold;
 }
 
 .active:hover {
-  color: var(--black);
+  color: var(--background);
 }
 
 .Qualif_Section {
@@ -340,7 +335,6 @@
 .calender {
   color: #727272;
   font-size: clamp(14px, 4vw, 18px);
-
 }
 
 .iconquli {
@@ -493,8 +487,7 @@
 }
 
 /* .touch_form input[type : sub] */
-@media (max-width:768px) {
-
+@media (max-width: 768px) {
   .Touch_contant {
     justify-content: center;
     padding: 0;
@@ -541,7 +534,7 @@
 
 .ImaeContServ::after {
   position: absolute;
-  content: '';
+  content: "";
   width: 100%;
   height: 100%;
   top: 0;
@@ -579,7 +572,6 @@
   -moz-transition: 1s;
   -ms-transition: 1s;
   -o-transition: 1s;
-
 }
 
 .Certif:hover .imageScroll {
@@ -614,7 +606,6 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
-
 }
 
 .iconsCer span {
