--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,7 +18,6 @@
   --radius: 5px;
   /* --black:  #2a2727;
 --background : #f7f7fa; */
-
 }
 
 /* 
@@ -82,8 +81,15 @@ body[data-theme="light"] {
   --text6: #2a2727;
   --box: 2px 4px 12px rgb(0 0 0/8%);
   --button: linear-gradient(to right, #2a2727 0%, #2a2727 100%);
-  --bg-im: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%)
-    /* --logo :  url("https://i.ibb.co/X48ZBnm/logo.png"); */
+  --bg-im: linear-gradient(
+    to top,
+    #d5d4d0 0%,
+    #d5d4d0 1%,
+    #eeeeec 31%,
+    #efeeec 75%,
+    #e9e9e7 100%
+  );
+  /* --logo :  url("https://i.ibb.co/X48ZBnm/logo.png"); */
 }
 
 body[data-theme="dark"] {
@@ -91,19 +97,33 @@ body[data-theme="dark"] {
   --background: #18191a;
   --nav-bg: #242526;
   --text-color: #ffffff;
-  --bgImage: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
+  --bgImage: linear-gradient(
+    to top,
+    #d5d4d0 0%,
+    #d5d4d0 1%,
+    #eeeeec 31%,
+    #efeeec 75%,
+    #e9e9e7 100%
+  );
   --text: #bdb6e8;
   --text2: #27255e;
   --text3: #605afa;
   --text4: #5727b0;
-  --text5: #EA80FC;
+  --text5: #ea80fc;
   --text6: #e91e63;
   --box: 0px 1px 2px rgba(0, 0, 0, 0.2);
   --button: linear-gradient(to right, #ed6ea0 0%, #ec8c69 100%);
   /* --button: linear-gradient(to right, #b8cbb8 0%, #b8cbb8 0%, #b465da 0%, #cf6cc9 33%, #ee609c 66%, #ee609c 100%); */
   /* --button: linear-gradient(to top, #f43b47 0%, #453a94 100%); */
   /* --button: linear-gradient(to top, #cc208e 0%, #6713d2 100%); */
-  --bg-im: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
+  --bg-im: linear-gradient(
+    to top,
+    #d5d4d0 0%,
+    #d5d4d0 1%,
+    #eeeeec 31%,
+    #efeeec 75%,
+    #e9e9e7 100%
+  );
   --border: 1px solid #666;
   /* --logo :  url("https://i.ibb.co/X48ZBnm/logo.png"); */
   --input: #3a3b3c;
@@ -112,15 +132,14 @@ body[data-theme="dark"] {
 
 h1,
 h2 {
-  font-family: 'Poppins', sans-serif !important;
+  font-family: "Poppins", sans-serif !important;
   color: var(--text6);
 }
 
 h3,
 p {
-  font-family: 'Poppins', sans-serif !important;
+  font-family: "Poppins", sans-serif !important;
   color: var(--black);
-
 }
 
 body {
@@ -150,7 +169,7 @@ a {
 }
 
 .paddingTop {
-  padding-top: 5px
+  padding-top: 5px;
 }
 
 .main-title {
@@ -250,8 +269,8 @@ a {
 }
 
 .say {
-  color: var(--background);
-  background: var(--black);
+  background: var(--background);
+  color: var(--black);
   display: block;
   text-decoration: none;
   /* background-color: #2a2727; */
@@ -275,8 +294,7 @@ a {
 }
 
 .say:hover {
-  color: var(--background);
-  ;
+  color: var(--black);
 }
 
 @media (max-width: 991.98px) {
@@ -358,10 +376,8 @@ a {
   -moz-transition: 1s;
   -ms-transition: 1s;
   -o-transition: 1s;
-  box-shadow:
-    inset 0 8px 60px rgb(0, 0, 0, 0.1),
-    inset 0 8px 8px rgb(0, 0, 0, 0.1),
-    inset 0 -4px 4px rgb(0, 0, 0, 0.1);
+  box-shadow: inset 0 8px 60px rgb(0, 0, 0, 0.1),
+    inset 0 8px 8px rgb(0, 0, 0, 0.1), inset 0 -4px 4px rgb(0, 0, 0, 0.1);
 }
 
 .lightActive {
@@ -370,7 +386,6 @@ a {
 
 .darkactive {
   background-color: #2b2b2b;
-
 }
 
 /*  start service */
@@ -398,7 +413,6 @@ a {
 
 .service div {
   margin: 0 10px;
-
 }
 
 .service p {
@@ -491,7 +505,6 @@ a {
   color: var(--black);
   background-color: transparent;
   border: none;
-
 }
 
 .LoginNoti .input-div {
@@ -537,12 +550,10 @@ a {
   .LoginNoti .input-div {
     width: 100%;
   }
-
 }
 
 .LoginNoti .submit-button {
   width: 70%;
-
 }
 
 ::placeholder {
