--- a/styles/layout/Nav.module.css
+++ b/styles/layout/Nav.module.css
@@ -9,11 +9,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
 .container {
-    background: var(--nav-bg);
-    /* transition:all 0.1s  linear ;
+  background: var(--nav-bg);
+  /* transition:all 0.1s  linear ;
     -webkit-transition:all 0.1s  linear ;
     -moz-transition:all 0.1s  linear ;
     -ms-transition:all 0.1s  linear ;
@@ -22,8 +21,7 @@
 .imageCont {
   position: relative;
   z-index: 9;
-  margin-left : 10px;
-
+  margin-left: 10px;
 }
 
 .navContent {
@@ -32,18 +30,19 @@
   align-items: center;
   column-gap: 1rem;
   z-index: 999;
-
+  flex-direction: row-reverse;
 }
 .toogle {
   margin-right: 10px;
-  
 }
 
 .navbar a {
   text-decoration: none;
   color: var(--black);
 }
-.close , .toogle , .links a span {
+.close,
+.toogle,
+.links a span {
   display: none;
 }
 .links {
@@ -57,44 +56,42 @@
   justify-content: center;
   align-items: center;
   font-weight: 500;
-
 }
 
 @media (max-width: 767.98px) {
-  
   .navbar {
     top: initial;
     bottom: -5px;
 
     /* position: relative; */
-}
-/* .close {
+  }
+  /* .close {
   position: absolute;
   right: 1.5rem;
   bottom: 1.5rem;
 } */
-.closeActive{
-  display: block;
-  position: relative;
-  margin-right: 10px;
-}
-.notActive {
-  display:none;
-}
-.toogleActive {
-  display: block;
-}
-    .links a span {
+  .closeActive {
+    display: block;
+    position: relative;
+    margin-right: 10px;
+  }
+  .notActive {
+    display: none;
+  }
+  .toogleActive {
+    display: block;
+  }
+  .links a span {
     display: block;
   }
   .links {
-    transition: bottom 0.3s linear , opacity 0.3s linear;
-    -webkit-transition: bottom 0.3s linear , opacity 0.3s linear;
-    -moz-transition: bottom 0.3s linear , opacity 0.3s linear;
-    -ms-transition: bottom 0.3s linear , opacity 0.3s linear;
-    -o-transition: bottom 0.3s linear , opacity 0.3s linear;
+    transition: bottom 0.3s linear, opacity 0.3s linear;
+    -webkit-transition: bottom 0.3s linear, opacity 0.3s linear;
+    -moz-transition: bottom 0.3s linear, opacity 0.3s linear;
+    -ms-transition: bottom 0.3s linear, opacity 0.3s linear;
+    -o-transition: bottom 0.3s linear, opacity 0.3s linear;
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 1.5rem;
     width: 100%;
     position: fixed;
@@ -109,7 +106,7 @@
     -ms-border-radius: 1.5rem 1.5rem 0 0;
     -o-border-radius: 1.5rem 1.5rem 0 0;
     opacity: 0.1;
-}
+  }
   .showNav {
     bottom: 0;
     opacity: 1;
@@ -122,15 +119,15 @@
   /* .logo {
     display: none;
   } */
- }
+}
 
- /* .ImageLang {
+/* .ImageLang {
   position: relative;
   width: 50px;
   height: 50px;
  } */
 
- /* .langSec {
+/* .langSec {
   position: relative;
  }
  .lang {
@@ -139,7 +136,7 @@
   left: 0;
   background-color: red;
  } */
- .langSec .langDiv {
+.langSec .langDiv {
   margin: 0 10px;
   display: flex;
   flex-direction: row-reverse;
@@ -149,39 +146,38 @@
   cursor: pointer;
   /* color:var(--text4) */
   color: var(--black);
+}
 
- }
-
- @media (max-width: 767.98px) {
+@media (max-width: 767.98px) {
   .langSec .langDiv {
-  flex-direction: column;
- }
- }
+    flex-direction: column;
+  }
+}
 
- .lang {
+.lang {
   display: flex;
   justify-content: space-between;
-  padding:5px 10px;
-  margin-top:5px ;
+  padding: 5px 10px;
+  margin-top: 5px;
   align-items: center;
-  width:100%;
- }
+  width: 100%;
+}
 
- .langIcon {
+.langIcon {
   font-size: 20px;
   cursor: pointer;
-  margin:0 10px
- }
+  margin: 0 10px;
+}
 
- .LangBtn {
+.LangBtn {
   width: 100%;
- }
+}
 
- .LangBtn p {
+.LangBtn p {
   font-size: 15px;
- }
+}
 
- .MeutBtnCont {
+.MeutBtnCont {
   display: none;
   position: relative;
   top: 0;
@@ -206,18 +202,18 @@
   right: 10px;
 }
 
-@media (max-width: 767.98px) { 
+@media (max-width: 767.98px) {
   .menu_Btn {
-  display: flex;
+    display: flex;
   }
   .MeutBtnCont {
     display: block;
   }
- }
+}
 
- .menu_Btn span {
+.menu_Btn span {
   position: absolute;
-  width:20px;
+  width: 20px;
   height: 2px;
   border-radius: 4px;
   -webkit-border-radius: 4px;
@@ -231,9 +227,10 @@
   -ms-transition: 0.3s;
   -o-transition: 0.3s;
 }
-.menu_Btn span:nth-of-type(1){
+.menu_Btn span:nth-of-type(1) {
   /*width: 15px;
-  */transform: translateY(0);
+  */
+  transform: translateY(0);
   -webkit-transform: translateY(0);
   -moz-transform: translateY(0);
   -ms-transform: translateY(0);
@@ -241,7 +238,7 @@
   right: 0;
 }
 .menu_Btn.BtnActive span:nth-of-type(1) {
-  width:20px;
+  width: 20px;
   transform: translateY(0) rotate(45deg);
   -webkit-transform: translateY(0) rotate(45deg);
   -moz-transform: translateY(0) rotate(45deg);
@@ -258,7 +255,7 @@
   -ms-transform: translateX(50px);
   -o-transform: translateX(50px);
 } */
-.menu_Btn span:nth-of-type(2){
+.menu_Btn span:nth-of-type(2) {
   /* width: 10px; */
   transform: translateY(8px);
   -webkit-transform: translateY(8px);
@@ -268,7 +265,7 @@
   right: 0;
 }
 .menu_Btn.BtnActive span:nth-of-type(2) {
-  width:20px;
+  width: 20px;
   transform: translateY(0) rotate(315deg);
   -webkit-transform: translateY(0) rotate(315deg);
   -moz-transform: translateY(0) rotate(315deg);
